<resources>
    <string name="app_name">Filmopedia</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="register_now">Register Now</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="new_user">New User?</string>
    <string name="sign_in">Sign In</string>
    <string name="saved">Saved</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="popular_movies">Popular Movies</string>
    <string name="please_login_to_continue">Please login to continue</string>
    <string name="filter_movies">Movies by Filter</string>
    <string name="filter">Filter</string>
    <string name="select_filter">Select Filter</string>
    <string name="wishlist">Wishlist</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="movie_title">Movie Title</string>
    <string name="sign_out">Sign Out</string>
    <string name="about">About</string>
</resources>