<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="25sp"
    android:layout_marginRight="25sp"
    android:gravity="center"
    android:orientation="vertical"
    style="@style/registerBackground"
    tools:context=".Register">

<!--    Register-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="141dp">

        <TextView
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15sp"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/register"
            android:textAlignment="textStart"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25sp"
        android:layout_marginRight="25sp"
        android:layout_marginBottom="25sp"
        android:orientation="vertical">

<!--        First Name-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6sp"
            android:layout_marginBottom="6sp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/firstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/first_name"
                android:fontFamily="@font/montserrat"
                style="@style/textColor"
                android:singleLine="true"
                android:imeOptions="actionNext"/>
        </com.google.android.material.textfield.TextInputLayout>

<!--        Last Name-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6sp"
            android:layout_marginBottom="6sp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/lastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/last_name"
                android:fontFamily="@font/montserrat"
                style="@style/textColor"
                android:singleLine="true"
                android:imeOptions="actionNext"/>
        </com.google.android.material.textfield.TextInputLayout>

<!--        Email-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6sp"
            android:layout_marginBottom="6sp">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:fontFamily="@font/montserrat"
                android:singleLine="true"
                style="@style/textColor"
                android:imeOptions="actionNext"/>
        </com.google.android.material.textfield.TextInputLayout>

<!--        Password-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            android:layout_marginTop="6sp"
            android:layout_marginBottom="6sp">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:fontFamily="@font/montserrat"
                style="@style/textColor"
                android:inputType="textPassword"
                android:singleLine="true"
                android:imeOptions="actionNext"/>

        </com.google.android.material.textfield.TextInputLayout>

<!--        Confirm Password-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            app:passwordToggleEnabled="true"
            android:layout_marginTop="6sp"
            android:layout_marginBottom="6sp">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/confirmPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/confirm_password"
                android:fontFamily="@font/montserrat"
                style="@style/textColor"
                android:inputType="textPassword"
                android:singleLine="true"
                android:imeOptions="actionDone"/>
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>


    <Button
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_marginHorizontal="70dp"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:textSize="15dp"
        android:fontFamily="@font/montserrat_bold"
        android:background="@drawable/rounded_button_corner"
        app:cornerRadius="5sp" />

<!--    Already a user-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TextView
            android:id="@+id/alreadyAUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="Already a user?"
            android:textAlignment="center"
            app:layout_constraintBottom_toTopOf="@+id/signInText"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0"
            tools:ignore="RtlCompat"
            />

        <TextView
            android:id="@+id/signInText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginBottom="64dp"
            android:text="@string/sign_in"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:ignore="RtlCompat"
            tools:layout_editor_absoluteX="0dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>



</LinearLayout>