<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Fragments.Home">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/popular_movies"
                android:fontFamily="@font/montserrat_bold"
                android:textStyle="bold"
                android:textSize="27dp"
                style="@style/textColor"
                />

            <com.facebook.shimmer.ShimmerFrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/shimmerView">

                <HorizontalScrollView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:padding="5dp">
                        <include layout="@layout/each_pop_movies_item_placeholder"/>
                        <include layout="@layout/each_pop_movies_item_placeholder"/>
                        <include layout="@layout/each_pop_movies_item_placeholder"/>
                    </LinearLayout>
                </HorizontalScrollView>

            </com.facebook.shimmer.ShimmerFrameLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/popMoviesRecyclerView"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/filter_movies"
                android:fontFamily="@font/montserrat_bold"
                android:textStyle="bold"
                android:textSize="27dp"
                style="@style/textColor" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"
                android:text="@string/select_filter"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="15dp"/>
            <Spinner
                android:id="@+id/genre_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:background="@drawable/spinner_bg" />

<!--            <com.facebook.shimmer.ShimmerFrameLayout-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:id="@+id/filterShimmerView">-->

<!--                <LinearLayout-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:orientation="horizontal"-->
<!--                    android:padding="5dp">-->
<!--                    <include layout="@layout/each_pop_movies_item_placeholder"/>-->
<!--                    <include layout="@layout/each_pop_movies_item_placeholder"/>-->
<!--                    <include layout="@layout/each_pop_movies_item_placeholder"/>-->
<!--                </LinearLayout>-->
<!--            </com.facebook.shimmer.ShimmerFrameLayout>-->

            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/filterMoviesRecyclerView"/>
        </LinearLayout>
    </ScrollView>
</FrameLayout>